--- a/src/container/Home/style.module.less
+++ b/src/container/Home/style.module.less
@@ -12,7 +12,7 @@
     justify-content: space-between;
     width: 100%;
     height: 80px;
-    background-color: #007fff;
+    background-color: gray;
     color: #fff;
     font-size: 14px;
     z-index: 100;
@@ -22,7 +22,7 @@
       > span {
         font-size: 12px;
         > b {
-          font-size: 26px;
+          font-size: 12px;
           font-family: DINCondensed-Bold, DINCondensed;
           margin-left: 4px;
         }
