--- a/src/container/Detail/style.module.less
+++ b/src/container/Detail/style.module.less
@@ -42,7 +42,7 @@
   }
   .info {
     width: 100%;
-    font-size: 14px;
+    font-size: 12px;
     text-align: left;
     .time {
       display: flex;
@@ -70,6 +70,14 @@
         flex: 9;
         color: rgba(0,0,0,0.9)
       }
+      // .collapse {
+      //   flex: 9;
+      //   color: rgba(0,0,0,0.9);
+      //   display: -webkit-box;
+      //   -webkit-box-orient: vertical;
+      //   -webkit-line-clamp: 1;
+      //   overflow: hidden;
+      // }
     }
   }
   .operation {
