--- a/src/components/PopupAddBill/style.module.less
+++ b/src/components/PopupAddBill/style.module.less
@@ -1,11 +1,11 @@
 .add-wrap {
-  padding-top: 12px;
+  padding-top: 12px; // 设置上边距为12像
   background-color: #fff;
-  border-top-left-radius: 10px;
+  border-top-left-radius: 10px; // 设置左上角和右上角的圆角半径为10像素
   border-top-right-radius: 10px;
   .header {
-    padding: 0 16px;
-    .close {
+    padding: 0 16px; // 设置上下内边距为0，左右内边距为16像素。
+    .close { // 使其内部子元素垂直居中对齐
       display: flex;
       align-items: center;
       justify-content: flex-end;
@@ -56,18 +56,61 @@
       }
     }
   }
-  .money {
-    padding-bottom: 12px;
+  .itemlist {
+    padding-bottom: 2px;
     border-bottom: 1px solid #e9e9e9;
-    margin: 0 24px;
-    .sufix {
-      font-size: 36px;
-      font-weight: bold;
-      vertical-align: top;
+    margin: 0 8px;
+    display: flex;
+    justify-content: flex-start;
+    flex-direction:column;
+    align-items: center;
+    > div {
+      align-self: flex-start;
+      background: rgba(0, 0, 0, 0.1);
+      border-radius: 30px;
+      padding: 3px 8px;
+      font-size: 12px;
     }
-    .amount {
-      font-size: 40px;
-      padding-left: 10px;
+    .item {
+      display: flex;
+      justify-content: flex-start;
+      align-items: center;
+      margin-right: 6px;
+      gap: 10px;
+      .sufix {
+        width: 60px;
+        height: 16px;
+        font-weight: bold;
+      }
+      .pinput {
+        width: 80px;
+        height: 12px;
+        padding: 4px 12px;
+        border-radius: 20px;
+        background-color: #f0f0f0;
+        color: rgba(0, 0, 0, 0.9);
+        height: 16px;
+        border:none;
+      }
+      .time {
+        display: flex;
+        justify-content: flex-start;
+        align-items: center;
+        padding: 4px 12px;
+        background-color: #f0f0f0;
+        border-radius: 20px;
+        color: rgba(0, 0, 0, 0.9);
+        width: 160px;
+        height: 16px;
+        .arrow {
+          font-size: 12px;
+          margin-left: 5px;
+        }
+      }
+    }
+    .arrow {
+      font-size: 12px;
+      margin-left: 4px;
     }
   }
   .type-warp {
@@ -93,8 +136,8 @@
           align-items: center;
           background-color: #f5f5f5;
           border-radius: 50%;
-          width: 30px;
-          height: 30px;
+          width: 20px;
+          height: 20px;
           margin-bottom: 5px;
           .iconfont {
             color: rgba(0, 0, 0, 0.5);
@@ -121,14 +164,61 @@
     }
   }
   .remark {
-    padding: 0 24px;
+    padding: 0 8px;
     padding-bottom: 12px;
-    color: #4b67e2;
+    // color: #4b67e2;
+    font-weight: bold;
+    // border-radius: 20px;
     :global {
       .za-input--textarea {
         border: 1px solid #e9e9e9;
         padding:  10px;
       }
     }
+    span {
+      width: 80px;
+      height: 16px;
+      // padding: 4px 12px;
+      // margin-bottom: 0px;
+      border-radius: 20px;
+      color: rgba(0, 0, 0, 0.9);
+      background-color: #f0f0f0;
+      height: 16px;
+      font-size: 12px;
+    }
+    
+    p {
+      // margin-top: 10px;
+      font-size: 10px;
+      color: rgba(0, 0, 0, 0.5);
+    }
+
+    button {
+      margin-top: 10px;
+      // width: 100%;
+      // height: 40px;
+      border-radius: 20px;
+      background-color: #7700ff;
+      color: #fff;
+      font-size: 10px;
+      // margin-right: 10px;
+      // margin-left: auto;
+      // display: flex;
+      // justify-content: flex-end;
+      // align-items: center;
+      // flex-wrap: nowrap;
+      // align-self: end;
+      display: 'inline';
+      margin-left: 80px;
+
+      // flex-direction: row;
+    }
+
+    .bottomitems {
+      display: 'flex';
+      justify-content: 'flex-end';
+      margin: 10px;
+    }
   }
 }
+
