--- a/src/container/Data/style.module.less
+++ b/src/container/Data/style.module.less
@@ -50,6 +50,25 @@
       color: rgba(0, 0, 0, .5);
       font-weight: 500;
     }
+    .type-wrap {
+      display: flex;
+      justify-content: flex-end;
+      align-items: flex-end;
+      > div {
+        align-self: flex-start;
+        background: rgba(0, 0, 0, 0.1);
+        border-radius: 30px;
+        padding: 3px 8px;
+        font-size: 12px;
+      }
+      .left {
+        margin-right: 6px;
+      }
+      .arrow {
+          font-size: 12px;
+          margin-left: 4px;
+      }
+    }
   }
   .structure {
     padding: 0 16px;
@@ -186,6 +205,117 @@
           height: 400px;
         }
       }
+    }
+  }
+  .itemlist {
+    padding-bottom: 2px;
+    border-bottom: 1px solid #e9e9e9;
+    margin: 0 4px;
+    display: flex;
+    justify-content: flex-start;
+    flex-direction:column;
+    align-items: center;
+    > div {
+      align-self: flex-start;
+      background: rgba(0, 0, 0, 0.1);
+      border-radius: 30px;
+      padding: 3px 8px;
+      font-size: 12px;
+    }
+    .item {
+      display: flex;
+      justify-content: flex-start;
+      align-items: center;
+      margin-right: 6px;
+      gap: 10px;
+      .sufix {
+        width: 120px;
+        height: 16px;
+        font-weight: bold;
+      }
+      .pinput {
+        width: 120px;
+        height: 12px;
+        padding: 4px 12px;
+        border-radius: 20px;
+        background-color: #f0f0f0;
+        height: 16px;
+      }
+      .time {
+        display: flex;
+        justify-content: flex-start;
+        align-items: center;
+        padding: 4px 12px;
+        background-color: #f0f0f0;
+        border-radius: 20px;
+        color: rgba(0, 0, 0, 0.9);
+        width: 160px;
+        height: 16px;
+        .arrow {
+          font-size: 12px;
+          margin-left: 5px;
+        }
+      }
+    }
+    .arrow {
+      font-size: 12px;
+      margin-left: 4px;
+    }
+  }
+  .coreshow {
+    padding-bottom: 2px;
+    border-bottom: 1px solid #e9e9e9;
+    margin: 0 4px;
+    display: flex;
+    justify-content: flex-start;
+    flex-direction:column;
+    align-items: center;
+    background-color: aquamarine;
+    > div {
+      align-self: flex-start;
+      background: rgba(0, 0, 0, 0.1);
+      border-radius: 30px;
+      padding: 3px 8px;
+      font-size: 12px;
+    }
+    .item {
+      display: flex;
+      justify-content: flex-start;
+      align-items: center;
+      margin-right: 6px;
+      gap: 10px;
+      .sufix {
+        width: 120px;
+        height: 16px;
+        font-weight: bold;
+      }
+      .pinput {
+        width: 120px;
+        height: 12px;
+        padding: 4px 12px;
+        border-radius: 20px;
+        background-color: #f0f0f0;
+        height: 16px;
+      }
+      .time {
+        display: flex;
+        justify-content: flex-start;
+        align-items: center;
+        padding: 4px 12px;
+        background-color: #f0f0f0;
+        border-radius: 20px;
+        color: rgba(0, 0, 0, 0.9);
+        width: 160px;
+        height: 16px;
+        .arrow {
+          font-size: 12px;
+          margin-left: 5px;
+        }
+      }
+    }
+    .arrow {
+      font-size: 12px;
+      margin-left: 4px;
     }
   }
 }
