--- a/src/components/BillItem/style.module.less
+++ b/src/components/BillItem/style.module.less
@@ -29,11 +29,11 @@
     }
   }
   :global {
-    .za-cell {
+    .za-list-item {
       &::after {
         left: 0;
       }
-      .za-cell__title {
+      .za-list-item__title {
         display: flex;
         align-items: center;
       }
