--- a/src/components/PopupAddBill/style.module.less
+++ b/src/components/PopupAddBill/style.module.less
@@ -164,20 +164,25 @@
     }
   }
   .remark {
-    padding: 0 8px;
-    padding-bottom: 12px;
-    // color: #4b67e2;
+    padding: 0 6px;
     font-weight: bold;
-    // border-radius: 20px;
+    // margin: 0 8px;
     :global {
       .za-input--textarea {
         border: 1px solid #e9e9e9;
         padding:  10px;
       }
+      .za-input textarea {
+        font-size: 12px;
+      }
     }
-    span {
+    .divtitle {
+      background: rgba(0, 0, 0, 0.1);
+    }
+
+    .beforespan {
       width: 80px;
-      height: 16px;
+      // height: 16px;
       // padding: 4px 12px;
       // margin-bottom: 0px;
       border-radius: 20px;
@@ -191,29 +196,50 @@
       // margin-top: 10px;
       font-size: 10px;
       color: rgba(0, 0, 0, 0.5);
+      background: rgba(0, 0, 0, 0.1);
+      border-radius: 10px;
+      padding: 2px 8px;
     }
 
     button {
-      margin-top: 10px;
-      // width: 100%;
-      // height: 40px;
+      // margin: 2px 0px;
       border-radius: 20px;
       background-color: #7700ff;
       color: #fff;
       font-size: 10px;
-      // margin-right: 10px;
-      // margin-left: auto;
-      // display: flex;
-      // justify-content: flex-end;
-      // align-items: center;
-      // flex-wrap: nowrap;
-      // align-self: end;
       display: 'inline';
-      margin-left: 80px;
-
-      // flex-direction: row;
+      // margin-left: 80px;
     }
 
+    .titlediv {
+      display: flex;
+      justify-content: flex-start;
+      flex-direction:row;
+      align-items: center;
+      background: rgba(0, 0, 0, 0.1);
+      border-radius: 20px;
+      padding: 2px 8px;
+      font-size: 12px;
+      width: 170px;
+
+      .sufix {
+        width: 72px;
+        height: 16px;
+        font-weight: bold;
+      }
+  
+      .rightitem {
+        width: 80px;
+        height: 16px;
+        padding: 4px 12px;
+        border-radius: 20px;
+        background-color: #f0f0f0;
+        color: rgba(0, 0, 0, 0.9);
+        height: 16px;
+        border:none;
+      }
+    }
+    
     .bottomitems {
       display: 'flex';
       justify-content: 'flex-end';
