--- a/src/container/Account/style.module.less
+++ b/src/container/Account/style.module.less
@@ -2,7 +2,7 @@
   padding: 0 12px;
   .form {
     :global {
-      .za-cell:after {
+      .za-list:after {
         left: unset;
         border-top: unset;
         border-bottom: 1PX solid #e9e9e9;
