--- a/src/container/Home/style.module.less
+++ b/src/container/Home/style.module.less
@@ -3,6 +3,7 @@
   display: flex;
   flex-direction: column;
   padding-top: 80px;
+  height: calc(~"(100% - 50px)");
   .header {
     position: fixed;
     top: 0;
@@ -52,7 +53,7 @@
     }
   }
   .content-wrap {
-    height: calc(~"(100% - 50px)");
+    // height: calc(~"(100% - 50px)");
     overflow: hidden;
     overflow-y: scroll;
     background-color: #f5f5f5;
