解决初始页面刷新状态和tabbar固定点底部的问题

--- a/src/components/NavBar/style.module.less
+++ b/src/components/NavBar/style.module.less
@@ -1,3 +1,11 @@
 .tab {
   border-top: 1px solid #e9e9e9;
 }
+
+.tabbar {
+  background-color: #EBEBEB;
+  position: fixed;
+  bottom: 0px;
+  left: 0px;
+  width: 100%;
+}
