--- a/src/container/Data/style.module.less
+++ b/src/container/Data/style.module.less
@@ -240,6 +240,10 @@
         border-radius: 20px;
         background-color: #f0f0f0;
         height: 16px;
+
+        display: flex;
+        justify-content: flex-start;
+        align-items: center;
       }
       .time {
         display: flex;
@@ -296,6 +300,10 @@
         border-radius: 20px;
         background-color: #f0f0f0;
         height: 16px;
+
+        display: flex;
+        justify-content: flex-start;
+        align-items: center;
       }
       .time {
         display: flex;
