--- a/src/components/BillItem/style.module.less
+++ b/src/components/BillItem/style.module.less
@@ -15,15 +15,33 @@
     }
     .date {
       font-weight: bold;
-      font-size: 16px;
+      font-size: 14px;
     }
     .money {
-      > span {
-        margin-left: 20px;
-        img {
-          width: 20px;
-          margin-right: 4px;
-          vertical-align: -4px
+      display: flex;
+      align-items: center;
+      justify-content: flex-end;
+      gap: 2px;
+      // background-color: #f9f9f9;
+      .item {
+        box-shadow: none;
+        display: flex;
+        align-items: center;
+        justify-content: flex-end;
+        border-radius: 3px;
+        // background-color: #ddff00;
+        // margin-left: 20px;
+        // gap: 20px;
+        .name {
+          font-size: 11px;
+          font-weight: bold;
+          // width: 36px;
+          // background-color: #8E44AD;
+        }
+        .number {
+          width: 48px;
+          // background-color: aqua;
+          font-size: 11px;
         }
       }
     }
@@ -33,10 +51,9 @@
       &::after {
         left: 0;
       }
-      .za-list-item__title {
-        display: flex;
-        align-items: center;
-      }
+    }
+    .za-list-item__title {
+      width: 100%;
     }
   }
   .item-icon {
@@ -44,5 +61,32 @@
     color: #007fff;
     vertical-align: -2px;
     margin-right: 2px;
+  }
+}
+
+.itemlist {
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+  width: 100%;
+  gap: 10px;
+  font-size: 12px;
+  .dir {
+    color: #273746;
+    margin-right: auto;
+    font-size: 16px;
+  }
+  .strategy {
+    color: #8E44AD;
+    margin-left: auto;
+  }
+  .trade_type {
+    color: #34495E;
+    margin-left: auto;
+  }
+  .number {
+    font-size: 12px;
+    width: 40px;
+    margin-left: auto;
   }
 }
