优化home页面汇总显示

--- a/src/container/Home/style.module.less
+++ b/src/container/Home/style.module.less
@@ -19,18 +19,26 @@
     z-index: 100;
     padding: 10px;
     .data-wrap {
-      font-size: 14px;
+      font-size: 12px;
+      display: flex;
+      flex-direction: row;
+      justify-content: center;
+      color: #141313;
+      gap: 10px;
       > span {
-        font-size: 12px;
+        // font-size: 12px;
+        // width: 64px;
         > b {
+          
           font-size: 12px;
-          font-family: DINCondensed-Bold, DINCondensed;
+          font-weight: bold;
           margin-left: 4px;
         }
       }
-      .income {
-        margin-left: 10px;
-      }
+      // }
+      // .income {
+      //   margin-left: 10px;
+      // }
     }
     .type-wrap {
       display: flex;
